_dev-env/k8s/front-door/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localdev-frontdoor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: caddy-container
        image: caddy:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: caddy-config
          mountPath: /etc/caddy/Caddyfile
          subPath: Caddyfile
      volumes:
      - name: caddy-config
        configMap:
          name: caddy-configmap
