_dev-env/k8s/front-door/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localdev-frontdoor
spec:
  selector:
    app: caddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
