_dev-env/k8s/front-door/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-routes
spec:
  entryPoints:
    - web
  routes:
    # matches all, caddy handles the rest
    - match: Host(`*`)
      kind: Rule
      services:
        - name: caddy-service
          port: 80
